tests/baselines/reference/conflictingCommonJSES2015Exports.errors.txt
tests/cases/conformance/salsa/bug24934.js(2,1): error TS2304: Cannot find name 'module'.


==== tests/cases/conformance/salsa/bug24934.js (1 errors) ====
    export function abc(a, b, c) { return 5; }
    module.exports = { abc };
    ~~~~~~
!!! error TS2304: Cannot find name 'module'.
==== tests/cases/conformance/salsa/use.js (0 errors) ====
    import { abc } from './bug24934';
    abc(1, 2, 3);
    